[workspace]
members = ["contracts/*"]

[profile.release.package.tland-token]
codegen-units = 1
incremental = false

[profile.release.package.staking]
codegen-units = 1
incremental = false

[profile.release.package.airdrop]
codegen-units = 1
incremental = false

[profile.release.package.vesting]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
