[package]
name = "tland-token"
version = "0.1.0"
authors = ["Jerzy Lasyk <jerzy.lasyk@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw0 = { version = "0.9.0" }
cw2 = { version = "0.9.0" }
cw20 = { version = "0.9.0" }
cw-storage-plus = { version = "0.9.0" }
cosmwasm-std = { version = "0.16.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
terra-cosmwasm = { version = "2.2.0" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
